Fix slider image height on mobile

--- a/wp-content/themes/ga-health-news-2015/style.css
+++ b/wp-content/themes/ga-health-news-2015/style.css
@@ -45,6 +45,7 @@ div.post-block-1 div.slider .thumbs {
 
 @media (max-width:768px) {
   .slider-tabs div.post-item img {
+    height: auto;
     max-width: 100%;
     width: auto !important;
   }
